modular12/gateway.yaml
apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: httpserver-gateway
    namespace: httpserver
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - httpserver.01.com
      port:
        name: https-default
        number: 443
        protocol: HTTP
      tls:
        credentialName: httpserver
        mode: SIMPLE
