modular12/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  hosts:
    - httpserver.01.com
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: httpserver.default.svc.cluster.local
            port:
              number: 80
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
        delay:
          percent: 50
          fixedDelay: 5s
